--- a/requirements.txt
+++ b/requirements.txt
@@ -1,45 +1,57 @@
+accelerate==0.19.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 captum==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-certifi==2022.12.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+certifi==2023.5.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
 charset-normalizer==3.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.11.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-filelock==3.10.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-fonttools==4.39.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-huggingface-hub==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+filelock==3.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fonttools==4.39.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+fsspec==2023.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+huggingface-hub==0.14.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-importlib-metadata==6.1.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
+markupsafe==2.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
-numpy==1.24.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-packaging==23.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+numpy==1.24.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pillow==9.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pillow==9.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 poethepoet==0.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 protobuf==3.20.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-pygments==2.14.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+psutil==5.9.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+pygments==2.15.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyparsing==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 python-dateutil==2.8.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pyyaml==6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-regex==2022.10.31 ; python_full_version >= "3.8.1" and python_version < "3.12"
-requests==2.28.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+regex==2023.5.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+requests==2.30.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
-scipy==1.10.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-sentencepiece==0.1.97 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==67.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
+sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
+setuptools==67.7.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-tokenizers==0.13.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
+tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==1.13.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.65.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-transformers[sentencepiece,tokenizers,torch]==4.27.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-typeguard==3.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+transformers[sentencepiece,tokenizers,torch]==4.29.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
+typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.5.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
-urllib3==1.26.15 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and platform_system == "Linux"
-zipp==3.15.0 ; python_full_version >= "3.8.1" and python_version < "3.10"
+urllib3==2.0.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
+wheel==0.40.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
