--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,8 @@ captum = "^0.6.0"
 numpy = "^1.21.6"
 torchtyping = "^0.1.4"
 typeguard = "<=2.13.3"
-torch = ">=1.13.1"
+# Omitting future torch releases as they don't install nvidia dependencies: https://github.com/pytorch/pytorch/issues/100974
+torch = "^2.0.0"
 matplotlib = "~3.5.3"
 tqdm = "^4.64.0"
 poethepoet = "^0.13.1"
