--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,6 +17,7 @@ cffi==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12" and im
 cfgv==3.4.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 charset-normalizer==3.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 click==8.1.7 ; python_full_version >= "3.8.1" and python_version < "3.12"
+cmake==3.27.6 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 comm==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -56,6 +57,7 @@ jupyter-client==8.3.1 ; python_full_version >= "3.8.1" and python_version < "3.1
 jupyter-core==5.3.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jupyterlab-widgets==3.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+lit==17.0.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib-inline==0.1.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -67,17 +69,17 @@ nest-asyncio==1.5.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 nodeenv==1.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.24.4 ; python_version < "3.12" and python_full_version >= "3.8.1"
-nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pandas==2.0.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 parso==0.8.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -142,19 +144,20 @@ sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
 threadpoolctl==3.2.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tornado==6.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 traitlets==5.11.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.33.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+triton==2.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tzdata==2023.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 virtualenv==20.24.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
 wcwidth==0.2.8 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 widgetsnbextension==4.0.9 ; python_full_version >= "3.8.1" and python_version < "3.12"
 xxhash==3.4.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 yarl==1.9.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
