--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ accelerate==0.23.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 captum==0.6.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 certifi==2023.7.22 ; python_full_version >= "3.8.1" and python_version < "3.12"
 charset-normalizer==3.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+cmake==3.27.6 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 colorama==0.4.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
 commonmark==0.9.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 cycler==0.12.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -12,22 +13,23 @@ huggingface-hub==0.17.3 ; python_full_version >= "3.8.1" and python_version < "3
 idna==3.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 jinja2==3.1.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 kiwisolver==1.4.5 ; python_full_version >= "3.8.1" and python_version < "3.12"
+lit==17.0.2 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 markupsafe==2.1.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 matplotlib==3.5.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 mpmath==1.3.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 networkx==3.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 numpy==1.24.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
-nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
-nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+nvidia-cublas-cu11==11.10.3.66 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-cupti-cu11==11.7.101 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-nvrtc-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cuda-runtime-cu11==11.7.99 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cudnn-cu11==8.5.0.96 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cufft-cu11==10.9.0.58 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-curand-cu11==10.2.10.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cusolver-cu11==11.4.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-cusparse-cu11==11.7.4.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-nccl-cu11==2.14.3 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
+nvidia-nvtx-cu11==11.7.91 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 packaging==21.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pastel==0.2.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 pillow==10.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
@@ -43,16 +45,17 @@ requests==2.31.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 rich==10.16.2 ; python_full_version >= "3.8.1" and python_version < "3.12"
 safetensors==0.3.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sentencepiece==0.1.99 ; python_full_version >= "3.8.1" and python_version < "3.12"
-setuptools==68.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+setuptools==68.2.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 six==1.16.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 sympy==1.12 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tokenizers==0.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tomli==2.0.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
-torch==2.1.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
+torch==2.0.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 torchtyping==0.1.4 ; python_full_version >= "3.8.1" and python_version < "3.12"
 tqdm==4.66.1 ; python_full_version >= "3.8.1" and python_version < "3.12"
 transformers[sentencepiece,tokenizers,torch]==4.33.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
+triton==2.0.0 ; platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
 typeguard==2.13.3 ; python_full_version >= "3.8.1" and python_version < "3.12"
 typing-extensions==4.8.0 ; python_full_version >= "3.8.1" and python_version < "3.12"
 urllib3==2.0.6 ; python_full_version >= "3.8.1" and python_version < "3.12"
-wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux"
+wheel==0.41.2 ; python_full_version >= "3.8.1" and python_version < "3.12" and sys_platform == "linux" or platform_system == "Linux" and platform_machine == "x86_64" and python_full_version >= "3.8.1" and python_version < "3.12"
